Fix sections padding on tablet & mobile. Add links to header. Implement percentage offset helper.Fix scroll on small desktops. Fix slider position on laptops. Fix tests

--- a/styles/preloader/preloader.scss
+++ b/styles/preloader/preloader.scss
@@ -111,6 +111,8 @@ body.loaded {
   &:before {
     left: calc((2 / 6) * 100% - 5px);
 
+    margin-left: -0.5px;
+
     @include breakpoint($tablet-p) {
 
       left: calc((3 / 6) * 100% - 5px);
@@ -129,6 +131,7 @@ body.loaded {
 
   &:after {
     right: calc((3 / 6) * 100% - 8px);
+    margin-right: 1px;
 
     @include breakpoint($mobile) {
 
